The EXEC command